@@ -14,6 +14,7 @@
 
 if __name__=='pymol.querying':
 
+    import time
     import selector
     import pymol
     import cmd
@@ -595,9 +596,10 @@ PYMOL API
 	'''
 DESCRIPTION
  
-    "get_version" returns a tuple of length three containing text,
+    "get_version" returns a tuple of length six containing text,
     floating point, and integer representations of the current PyMOL
-    version number.
+    version number, build date as unix timestamp, GIT SHA and SVN
+    code revision so far available.
    
 PYMOL API
 
@@ -613,11 +615,19 @@ PYMOL API
         if _raising(r,_self):
             raise pymol.CmdException
         else:
-            if not quiet:
-                if _feedback(fb_module.cmd,fb_mask.results,_self):
-                    print " version: %s (%2.3f) %d"%r
+            quiet = int(quiet)
+            if quiet < 1 and _feedback(fb_module.cmd, fb_mask.results, _self):
+                print " version: %s (%2.3f) %d," % r[:3],
+                print "Incentive Product" if pymol.invocation.options.incentive_product else "Open-Source"
+                if quiet < 0:
+                    if r[3]:
+                        print ' build date:', time.strftime('%c %Z', time.localtime(r[3]))
+                    if r[4]:
+                        print ' git sha:', r[4]
+                    if r[5]:
+                        print ' svn rev:', r[5]
         return r
-    
+
     def get_vrml(version=2,_self=cmd): 
         '''
 DESCRIPTION
