@@ -2,6 +2,12 @@
 CHANGE LOG
 =========================================================================
 
+2013-10-18 Thomas Holder <speleo3@users.sf.net>
+
+	* enhance get_version command, quiet=-1 gives build information
+
+	* remove max_triangles setting (was unused)
+
 2013-10-04 Thomas Holder <speleo3@users.sf.net>
 
 	* fix segfault in OrthoRenderCGO
